1-8 Kubernetes Security - Network Policy and Hands-on Demo/MD/YAML/lian-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: qa-env
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: back-end-db-redis
  namespace: qa-env
spec:
  podSelector:
    matchLabels:
      app: back-end-db-redis
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: back-end-springboot-microservices
      ports:
        - port: 6379
  egress:
    - to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP      
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: back-end-springboot-microservices
  namespace: qa-env
spec:
  podSelector:
    matchLabels:
      app: back-end-springboot-microservices
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector: {}
      ports:
        - port: 9999
    - from:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - port: 9999
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: back-end-db-redis
      ports:
        - port: 6379
    - to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP    
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: front-end-app-react-ui-microservices
  namespace: qa-env
spec:
  podSelector:
    matchLabels:
      app: front-end-app-react-ui-microservices
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector: {}
      ports:
        - port: 80
    - from:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - port: 80
  egress:
    - to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
